--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!-- Site Title -->	
 <title>Bem na Escola | Consultório de Psicopedagogia</title>
 <!-- Load CSS -->
 <link href="css/style.css" rel="stylesheet" type="text/css" />
