--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 	<!-- Start Section Divider -->
 	<div class="section divider">
-		<h2 >Nosso Trabalho</h2>
+		<h2 >Nosso Trabalho /h2>
 		<a class="scroll" id="trabalho"></a>
 	</div>
 	<!-- End Section Divider -->
