--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
 	</div>
 
 	<div class="localizacao">
-			<h3>Endereço: Av. João Manoel dos Santos Ribas, 944 - Nova Rússia, Ponta Grossa - PR, 84051-410</h3>
-			<h3>Fone: (42) 99978-6201</h3>
+			<h3>Nosso endereço: Av. João Manoel dos Santos Ribas, 944 - Nova Rússia, Ponta Grossa - PR, 84051-410</h3>
+			<h3>Nosso Whatsapp: (42) 99978-6201</h3>
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1806.7156298789573!2d-50.175410141922846!3d-25.087258866807648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94e81a0f8cc24c57%3A0xca7daf3d62c9a479!2sAv.+Jo%C3%A3o+Manoel+dos+Santos+Ribas%2C+920-998+-+Nova+R%C3%BAssia%2C+Ponta+Grossa+-+PR%2C+84051-410!5e0!3m2!1spt-BR!2sbr!4v1506518930523" width="1500" height="250" frameborder="0" style="border:0" ></iframe>
 			<div class="clear"></div>
 	</div>
